# ocptoolkit_poro_petsc_solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_petscsolver.sh  env  make_ocp.sh  ocp.yml  run.sh
.github/workflows/: build.yml  publish.yml
cmake/: poro_petsc_solverConfig.cmake.in
configurations/: default.sh
include/: PETScBSolverPS.h  PETScSolver.h
scripts/: prepare.sh  publish_src.sh
src/: PETSC_FIM_solver.cpp  decoup.cpp  preSolver.cpp  precond.cpp
